--- a/css/test.css
+++ b/css/test.css
@@ -1,14 +1,14 @@
 .logo{
-width: 80px;
-padding-left: 250px;
+width: 20%;
+padding-left: 5%;
 }
 .logo1{
-  width: 300px;
+  width: 30%;
 }
 .about {
   background-color: white;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 10%;
+    padding-bottom: 10%;
     }
 
 div {
@@ -23,13 +23,28 @@ body{
 }
 
 .left{
-  margin-left: 600px;
+  height:40px;
+  width: 150%;
+  margin-left: 800%;
+
 }
 
+.right{
+  height:40px;
+  width: 150%;
+  margin-left: 1300%;
+}
+
+.center{
+  height:40px;
+  width: 175%;
+  margin-left: 400%;
+}
 
 input{
-  width: 100px;
-  height: 40px;
+  display: inline-block;
+  width: 10%;
+  height: 20%;
   border-style: none;
   font-style: oblique;
   font-family: cursive;
@@ -38,7 +53,7 @@ input{
 .second{
   background-color: #a6dcef;
   height: 710px;
-  padding-left: 550px;
+  padding-left: 30%;
 }
 
 .title{
