--- a/css/test.css
+++ b/css/test.css
@@ -1,8 +1,13 @@
 .logo{
-width: 20%;
+width: 7%;
 position: relative;
-right: 10%;
+top: 20px;
+left: 10%;
 }
+.top{
+  height: 1000px;
+}
+
 .logo1{
   width: 30%;
 }
@@ -27,8 +32,14 @@ body{
   height:40px;
   width: 150%;
   position: relative;
-  left: 800%;
-
+  left: 66%;
+  bottom: 20px;
+  text-decoration: none;
+  color: green;
+  font-style: oblique;
+  font-family: cursive;
+  border-style: dashed;
+  border-color: red;
 
 }
 
@@ -36,12 +47,21 @@ body{
   height:40px;
   width: 150%;
   position: relative;
-  left: 1295%;
+  left: 70%;
+  bottom: 20px;
+  text-decoration: none;
+  color: green;
+  font-style: oblique;
+  font-family: cursive;
+  border-style: dashed;
+  border-color: red;
+
 }
 
 .landimage{
   position: relative;
   left: 20%;
+  top: 200px;
 }
 
 
@@ -49,7 +69,14 @@ body{
   height:40px;
   width: 175%;
   position: relative;
-  left: 400%;
+  left: 68%;
+  bottom: 20px;
+  text-decoration: none;
+  color: green;
+  font-style: oblique;
+  font-family: cursive;
+  border-style: dashed;
+  border-color: red;
 }
 
 input{
@@ -71,19 +98,22 @@ input{
   font-size: 500%;
   font-family: cursive;
   font-style: italic;
-  padding-top: 50px;
   padding-bottom: 0;
   position: relative;
   left: 30%;
+  top: 60px;
 }
 
 .subtitle{
-   font-size: 160%;
-   font-family: cursive;
+   font-size: 150%;
    font-style: oblique;
-   position: relative;
-   left: 40%;
+   font-family: cursive;
    color: #251f44;
+   position: relative;
+   top: 120px;
+   left: 5%;
+   display: inline-block;
+
  }
 
 .abouttitle{
