--- a/css/test.css
+++ b/css/test.css
@@ -38,8 +38,7 @@ body{
   color: green;
   font-style: oblique;
   font-family: cursive;
-  border-style: dashed;
-  border-color: red;
+  border-style: outset;
 
 }
 
